--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.3",
-    "next": "10.0.5",
+    "next": "^14.1.3",
     "next-seo": "^4.18.0",
-    "npm": "^6.14.11",
+    "npm": "^10.5.0",
     "postcss": "^8.2.4",
-    "react": "17.0.1",
+    "react": "^18",
     "react-countup": "^4.3.3",
-    "react-dom": "17.0.1",
+    "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "react-visibility-sensor": "^5.1.1",
     "tailwindcss": "^2.0.2"
   }
